--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
   "devDependencies": {
     "@babel/core": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
+    "@commitlint/cli": "^7.2.1",
+    "@commitlint/config-conventional": "^7.1.2",
     "babel-loader": "^8.0.4",
     "chai": "^4.2.0",
     "codecov": "^3.1.0",
