--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "markdown-to-vue-loader",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Markdown to Vue component loader for Webpack.",
   "main": "dist/markdown-to-vue-loader.js",
   "module": "dist/markdown-to-vue-loader.esm.js",
@@ -33,8 +33,8 @@
     "dev": "npm run clear:docs && npm run dev:docs",
     "dev:docs": "webpack-dev-server --mode development --hot --open --overlay",
     "lint": "npm run lint:js && npm run lint:css",
-    "lint:js": "eslint src test *.config.js --ext .js,.vue --fix",
     "lint:css": "stylelint **/src/**/*.{css,scss,vue,html} --fix",
+    "lint:js": "eslint src test *.js --ext .js,.vue --fix",
     "lint:docs": "eslint docs/src --ext .js,.vue --fix",
     "prebuild": "npm run lint && npm run clear",
     "release": "npm run build && npm test && npm run deploy",
@@ -84,13 +84,13 @@
     "stylelint": "^9.9.0",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-order": "^2.0.0",
-    "vue": "^2.5.18",
+    "vue": "^2.5.19",
     "vue-loader": "^15.4.2",
     "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.5.18",
+    "vue-template-compiler": "^2.5.19",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10",
-    "webpack-merge": "^4.1.4"
+    "webpack-merge": "^4.1.5"
   }
 }
