--- a/package.json
+++ b/package.json
@@ -36,61 +36,60 @@
     "lint:css": "stylelint **/src/**/*.{css,scss,vue,html} --fix",
     "lint:js": "eslint src test *.js --ext .js,.vue --fix",
     "lint:docs": "eslint docs/src --ext .js,.vue --fix",
-    "prebuild": "npm run lint && npm run clear",
-    "release": "npm run build && npm test && npm run deploy",
+    "release": "npm run lint && npm run clear && npm run build && npm test && npm run deploy",
     "start": "npm run dev",
     "test": "nyc mocha",
     "test:cover": "nyc report --reporter=text-lcov > coverage.lcov && codecov"
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
-    "loader-utils": "^1.1.0",
+    "loader-utils": "^1.2.3",
     "markdown-it": "^8.4.2",
-    "postcss": "^7.0.6"
+    "postcss": "^7.0.14"
   },
   "peerDependencies": {
     "vue-loader": "^15.0.0",
     "webpack": "^4.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.0",
-    "@babel/preset-env": "^7.2.0",
-    "@commitlint/cli": "^7.2.1",
-    "@commitlint/config-conventional": "^7.1.2",
-    "babel-loader": "^8.0.4",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "@commitlint/cli": "^7.5.2",
+    "@commitlint/config-conventional": "^7.5.0",
+    "babel-loader": "^8.0.5",
     "chai": "^4.2.0",
     "codecov": "^3.1.0",
     "cross-env": "^5.2.0",
-    "css-loader": "^2.0.0",
+    "css-loader": "^2.1.0",
     "del-cli": "^1.1.0",
-    "eslint": "^5.10.0",
+    "eslint": "^5.13.0",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-html": "^5.0.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "eslint-plugin-html": "^5.0.3",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-vue": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
-    "husky": "^1.2.0",
-    "lint-staged": "^8.1.0",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.3",
     "memory-fs": "^0.4.1",
     "mocha": "^5.2.0",
-    "nyc": "^13.1.0",
-    "postcss-cli": "^6.0.1",
+    "nyc": "^13.2.0",
+    "postcss-cli": "^6.1.1",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
-    "postcss-preset-env": "^6.4.0",
-    "rollup": "^0.67.4",
-    "rollup-plugin-babel": "^4.0.3",
+    "postcss-preset-env": "^6.5.0",
+    "rollup": "^1.1.2",
+    "rollup-plugin-babel": "^4.3.2",
     "style-loader": "^0.23.1",
-    "stylelint": "^9.9.0",
+    "stylelint": "^9.10.1",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-order": "^2.0.0",
-    "vue": "^2.5.19",
-    "vue-loader": "^15.4.2",
+    "vue": "^2.6.6",
+    "vue-loader": "^15.6.2",
     "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.5.19",
-    "webpack": "^4.27.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10",
-    "webpack-merge": "^4.1.5"
+    "vue-template-compiler": "^2.6.6",
+    "webpack": "^4.29.3",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.1.14",
+    "webpack-merge": "^4.2.1"
   }
 }
