--- a/package.json
+++ b/package.json
@@ -1,26 +1,18 @@
 {
   "name": "markdown-to-vue-loader",
-  "version": "1.0.1",
+  "version": "2.0.0-alpha",
   "description": "Markdown to Vue component loader for Webpack.",
-  "main": "dist/markdown-to-vue-loader.js",
-  "module": "dist/markdown-to-vue-loader.esm.js",
-  "files": [
-    "src",
-    "dist"
-  ],
+  "main": "index.js",
   "scripts": {
-    "build": "rollup -c",
     "build:docs": "webpack --mode production --env.production",
-    "clear": "del-cli dist",
-    "clear:docs": "del-cli docs/dist docs/index.html",
-    "deploy": "npm run lint:docs && npm run clear:docs && npm run build:docs",
+    "clear:docs": "del-cli docs",
     "dev": "npm run clear:docs && npm run dev:docs",
     "dev:docs": "webpack-dev-server --mode development --hot --open --overlay",
     "lint": "npm run lint:js && npm run lint:css",
     "lint:css": "stylelint **/src/**/*.{css,scss,vue,html} --fix",
     "lint:js": "eslint src test *.js --ext .js,.vue --fix",
-    "lint:docs": "eslint docs/src --ext .js,.vue --fix",
-    "release": "npm run lint && npm run clear && npm run build && npm test && npm run deploy",
+    "release": "npm run lint && npm test && npm run release:docs",
+    "release:docs": "npm run clear:docs && npm run build:docs",
     "start": "npm run dev",
     "test": "nyc mocha",
     "test:cover": "nyc report --reporter=text-lcov > coverage.lcov && codecov"
@@ -58,48 +50,43 @@
     "webpack": "^4.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.3.1",
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
     "@commitlint/cli": "^7.5.2",
     "@commitlint/config-conventional": "^7.5.0",
     "babel-loader": "^8.0.5",
     "chai": "^4.2.0",
-    "codecov": "^3.1.0",
+    "codecov": "^3.2.0",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.0",
     "del-cli": "^1.1.0",
-    "eslint": "^5.13.0",
+    "eslint": "^5.15.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-html": "^5.0.3",
     "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-vue": "^5.1.0",
+    "eslint-plugin-vue": "^5.2.2",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.3.1",
-    "lint-staged": "^8.1.3",
+    "lint-staged": "^8.1.5",
     "memory-fs": "^0.4.1",
-    "mocha": "^5.2.0",
-    "nyc": "^13.2.0",
-    "postcss-cli": "^6.1.1",
+    "mocha": "^6.0.2",
+    "nyc": "^13.3.0",
+    "postcss-cli": "^6.1.2",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
-    "postcss-preset-env": "^6.5.0",
-    "rollup": "^1.1.2",
-    "rollup-plugin-babel": "^4.3.2",
+    "postcss-preset-env": "^6.6.0",
     "style-loader": "^0.23.1",
     "stylelint": "^9.10.1",
     "stylelint-config-standard": "^18.2.0",
-    "stylelint-order": "^2.0.0",
-    "vue": "^2.6.6",
-    "vue-loader": "^15.6.2",
+    "stylelint-order": "^2.1.0",
+    "vue": "^2.6.8",
+    "vue-loader": "^15.7.0",
     "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.6.6",
-    "webpack": "^4.29.3",
+    "vue-template-compiler": "^2.6.8",
+    "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.1.14",
+    "webpack-dev-server": "^3.2.1",
     "webpack-merge": "^4.2.1"
-  },
-  "engines": {
-    "node": "^8.11.0"
   },
   "browserslist": [
     "last 2 versions",
@@ -129,7 +116,7 @@
       ]
     },
     "ignore": [
-      "**/dist/*"
+      "docs/*"
     ]
   }
 }
