--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js: node
 cache: npm
 script:
-  - npm run build
+  - npm run lint
   - npm test
 after_success:
   - npm run test:cover
