--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "markdown-to-vue-loader",
-  "version": "2.0.0-alpha.2",
+  "version": "2.0.0-beta",
   "description": "Markdown to Vue component loader for Webpack.",
   "main": "index.js",
   "scripts": {
@@ -42,51 +42,51 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
     "loader-utils": "^1.2.3",
-    "markdown-it": "^9.0.0",
-    "postcss": "^7.0.17"
+    "markdown-it": "^10.0.0",
+    "postcss": "^7.0.18"
   },
   "peerDependencies": {
     "vue-loader": "^15.0.0",
     "webpack": "^4.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.4",
-    "@babel/preset-env": "^7.5.4",
-    "@commitlint/cli": "^8.0.0",
-    "@commitlint/config-conventional": "^8.0.0",
+    "@babel/core": "^7.6.4",
+    "@babel/preset-env": "^7.6.3",
+    "@commitlint/cli": "^8.2.0",
+    "@commitlint/config-conventional": "^8.2.0",
     "babel-loader": "^8.0.6",
     "chai": "^4.2.0",
-    "codecov": "^3.5.0",
-    "cross-env": "^5.2.0",
-    "css-loader": "^3.0.0",
-    "del-cli": "^2.0.0",
-    "eslint": "^6.0.1",
-    "eslint-config-airbnb-base": "^13.2.0",
+    "codecov": "^3.6.1",
+    "cross-env": "^6.0.3",
+    "css-loader": "^3.2.0",
+    "del-cli": "^3.0.0",
+    "eslint": "^6.5.1",
+    "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-html": "^6.0.0",
-    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-vue": "^5.2.3",
     "html-webpack-plugin": "^3.2.0",
-    "husky": "^3.0.0",
+    "husky": "^3.0.8",
     "lint-staged": "^8.2.1",
-    "memory-fs": "^0.4.1",
-    "mocha": "^6.1.4",
+    "memory-fs": "^0.5.0",
+    "mocha": "^6.2.1",
     "nyc": "^14.1.1",
     "postcss-cli": "^6.1.3",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
-    "style-loader": "^0.23.1",
-    "stylelint": "^10.1.0",
-    "stylelint-config-standard": "^18.3.0",
-    "stylelint-order": "^3.0.0",
+    "style-loader": "^1.0.0",
+    "stylelint": "^11.1.1",
+    "stylelint-config-standard": "^19.0.0",
+    "stylelint-order": "^3.1.1",
     "vue": "^2.6.10",
     "vue-loader": "^15.7.0",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.5",
-    "webpack-dev-server": "^3.7.2",
-    "webpack-merge": "^4.2.1"
+    "webpack": "^4.41.1",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.2",
+    "webpack-merge": "^4.2.2"
   },
   "browserslist": [
     "last 2 versions",
