--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "markdown-to-vue-loader",
-  "version": "2.0.0-beta",
+  "version": "2.0.0",
   "description": "Markdown to Vue component loader for Webpack.",
   "main": "index.js",
   "files": [
@@ -12,7 +12,7 @@
     "dev": "npm run clear:docs && npm run dev:docs",
     "dev:docs": "webpack-dev-server --mode development --hot --open --overlay",
     "lint": "npm run lint:js && npm run lint:css",
-    "lint:css": "stylelint **/src/**/*.{css,scss,vue,html} --fix",
+    "lint:css": "stylelint {src,test}/**/*.{css,scss,vue,html,md} --fix",
     "lint:js": "eslint src test *.js --ext .js,.vue --fix",
     "release": "npm run lint && npm test && npm run release:docs",
     "release:docs": "npm run clear:docs && npm run build:docs",
@@ -69,10 +69,10 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-vue": "^5.2.3",
     "html-webpack-plugin": "^3.2.0",
-    "husky": "^3.0.8",
-    "lint-staged": "^8.2.1",
+    "husky": "^3.0.9",
+    "lint-staged": "^9.4.2",
     "memory-fs": "^0.5.0",
-    "mocha": "^6.2.1",
+    "mocha": "^6.2.2",
     "nyc": "^14.1.1",
     "postcss-cli": "^6.1.3",
     "postcss-import": "^12.0.1",
@@ -86,7 +86,7 @@
     "vue-loader": "^15.7.0",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
-    "webpack": "^4.41.1",
+    "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.2",
     "webpack-merge": "^4.2.2"
@@ -108,18 +108,13 @@
     }
   },
   "lint-staged": {
-    "linters": {
-      "*.js": [
-        "eslint --fix",
-        "git add"
-      ],
-      "*.{css,scss,vue,html}": [
-        "stylelint --fix",
-        "git add"
-      ]
-    },
-    "ignore": [
-      "docs/*"
+    "{src,test}/**/*.js": [
+      "eslint --fix",
+      "git add"
+    ],
+    "{src,test}/**/*.{css,scss,vue,html,md}": [
+      "stylelint --fix",
+      "git add"
     ]
   }
 }
