chore: update external links

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   ],
   "author": {
     "name": "Chen Fengyuan",
-    "url": "https://chenfengyuan.com"
+    "url": "https://chenfengyuan.com/"
   },
   "license": "MIT",
   "bugs": {
