--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
   "name": "markdown-to-vue-loader",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "description": "Markdown to Vue component loader for Webpack.",
   "main": "index.js",
   "files": [
     "index.js"
   ],
   "scripts": {
-    "build:docs": "webpack --mode production --env.production",
+    "build:docs": "webpack --mode production",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "clear:docs": "del-cli docs",
     "dev": "npm run clear:docs && npm run dev:docs",
-    "dev:docs": "webpack-dev-server --mode development --hot --open --overlay",
+    "dev:docs": "webpack serve --mode development --hot --open --overlay",
     "lint": "npm run lint:js && npm run lint:css",
     "lint:css": "stylelint {src,test}/**/*.{css,scss,vue,html,md} --fix",
     "lint:js": "eslint src test *.js --ext .js,.vue --fix",
-    "release": "npm run lint && npm test && npm run release:docs",
+    "release": "npm run lint && npm test && npm run release:docs && npm run changelog",
     "release:docs": "npm run clear:docs && npm run build:docs",
     "start": "npm run dev",
-    "test": "nyc mocha",
+    "test": "nyc mocha --timeout 10000",
     "test:cover": "nyc report --reporter=text-lcov > coverage.lcov && codecov"
   },
   "repository": {
@@ -43,52 +44,53 @@
   },
   "homepage": "https://fengyuanchen.github.io/markdown-to-vue-loader",
   "dependencies": {
-    "cheerio": "^1.0.0-rc.2",
-    "markdown-it": "^10.0.0",
-    "postcss": "^7.0.18"
+    "cheerio": "^1.0.0-rc.3",
+    "markdown-it": "^12.0.2",
+    "postcss": "^8.1.4"
   },
   "peerDependencies": {
     "vue-loader": "^15.0.0",
-    "webpack": "^4.0.0"
+    "webpack": "^5.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.4",
-    "@babel/preset-env": "^7.6.3",
-    "@commitlint/cli": "^8.2.0",
-    "@commitlint/config-conventional": "^8.2.0",
-    "babel-loader": "^8.0.6",
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
+    "babel-loader": "^8.1.0",
     "chai": "^4.2.0",
-    "codecov": "^3.6.1",
-    "cross-env": "^6.0.3",
-    "css-loader": "^3.2.0",
-    "del-cli": "^3.0.0",
-    "eslint": "^6.5.1",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-html": "^6.0.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-vue": "^5.2.3",
-    "html-webpack-plugin": "^3.2.0",
-    "husky": "^3.0.9",
-    "lint-staged": "^9.4.2",
+    "codecov": "^3.8.0",
+    "conventional-changelog-cli": "^2.1.0",
+    "cross-env": "^7.0.2",
+    "css-loader": "^3.6.0",
+    "del-cli": "^3.0.1",
+    "eslint": "^7.12.1",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-html": "^6.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-vue": "^7.1.0",
+    "html-webpack-plugin": "^4.5.0",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.5.0",
     "memory-fs": "^0.5.0",
-    "mocha": "^6.2.2",
-    "nyc": "^14.1.1",
-    "postcss-cli": "^6.1.3",
-    "postcss-import": "^12.0.1",
-    "postcss-loader": "^3.0.0",
+    "mocha": "^8.2.0",
+    "nyc": "^15.1.0",
+    "postcss-cli": "^8.2.0",
+    "postcss-import": "^13.0.0",
+    "postcss-loader": "^4.0.4",
     "postcss-preset-env": "^6.7.0",
-    "style-loader": "^1.0.0",
-    "stylelint": "^11.1.1",
-    "stylelint-config-standard": "^19.0.0",
-    "stylelint-order": "^3.1.1",
-    "vue": "^2.6.10",
-    "vue-loader": "^15.7.0",
+    "style-loader": "^2.0.0",
+    "stylelint": "^13.7.2",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-order": "^4.1.0",
+    "vue": "^2.6.12",
+    "vue-loader": "^15.9.4",
     "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.6.10",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.2",
-    "webpack-merge": "^4.2.2"
+    "vue-template-compiler": "^2.6.12",
+    "webpack": "^5.3.2",
+    "webpack-cli": "^4.1.0",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.3.0"
   },
   "browserslist": [
     "last 2 versions",
