refactor!: upgrade to Vue 3

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "markdown-to-vue-loader",
-  "version": "3.0.0",
+  "version": "4.0.0-beta",
   "description": "Markdown to Vue component loader for Webpack.",
   "main": "index.js",
   "files": [
@@ -10,14 +10,14 @@
     "build:docs": "webpack --mode production",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "clear:docs": "del-cli docs",
-    "dev": "npm run clear:docs && npm run dev:docs",
-    "dev:docs": "webpack serve --mode development --hot --open --overlay",
+    "serve": "npm run clear:docs && npm run serve:docs",
+    "serve:docs": "webpack serve --mode development",
     "lint": "npm run lint:js && npm run lint:css",
     "lint:css": "stylelint {src,test}/**/*.{css,scss,vue,html,md} --fix",
     "lint:js": "eslint src test *.js --ext .js,.vue --fix",
     "release": "npm run lint && npm test && npm run release:docs && npm run changelog",
     "release:docs": "npm run clear:docs && npm run build:docs",
-    "start": "npm run dev",
+    "start": "npm run serve",
     "test": "nyc mocha --timeout 10000",
     "test:cover": "nyc report --reporter=text-lcov > coverage.lcov && codecov"
   },
@@ -28,8 +28,11 @@
   "keywords": [
     "markdown",
     "vue",
+    "vue2",
+    "vue3",
     "vue-component",
-    "vue.js",
+    "webpack",
+    "webpack5",
     "webpack-loader",
     "front-end",
     "node"
@@ -45,57 +48,59 @@
   "homepage": "https://fengyuanchen.github.io/markdown-to-vue-loader",
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
-    "markdown-it": "^12.0.2",
-    "postcss": "^8.1.4"
+    "markdown-it": "^12.0.3",
+    "postcss": "^8.2.1"
   },
   "peerDependencies": {
-    "vue-loader": "^15.0.0",
+    "vue-loader": ">=15.0.0",
     "webpack": "^5.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/preset-env": "^7.12.1",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
-    "babel-loader": "^8.1.0",
+    "@vue/compiler-sfc": "^3.0.4",
+    "babel-loader": "^8.2.2",
     "chai": "^4.2.0",
-    "codecov": "^3.8.0",
-    "conventional-changelog-cli": "^2.1.0",
-    "cross-env": "^7.0.2",
-    "css-loader": "^3.6.0",
+    "codecov": "^3.8.1",
+    "conventional-changelog-cli": "^2.1.1",
+    "cross-env": "^7.0.3",
+    "css-loader": "^5.0.1",
     "del-cli": "^3.0.1",
-    "eslint": "^7.12.1",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-html": "^6.1.0",
+    "eslint": "^7.15.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-html": "^6.1.1",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-vue": "^7.1.0",
+    "eslint-plugin-vue": "^7.2.0",
     "html-webpack-plugin": "^4.5.0",
-    "husky": "^4.3.0",
-    "lint-staged": "^10.5.0",
+    "husky": "^4.3.6",
+    "lint-staged": "^10.5.3",
     "memory-fs": "^0.5.0",
-    "mocha": "^8.2.0",
+    "mocha": "^8.2.1",
     "nyc": "^15.1.0",
-    "postcss-cli": "^8.2.0",
-    "postcss-import": "^13.0.0",
-    "postcss-loader": "^4.0.4",
+    "postcss-cli": "^8.3.1",
+    "postcss-import": "^14.0.0",
+    "postcss-loader": "^4.1.0",
     "postcss-preset-env": "^6.7.0",
     "style-loader": "^2.0.0",
-    "stylelint": "^13.7.2",
+    "stylelint": "^13.8.0",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-order": "^4.1.0",
-    "vue": "^2.6.12",
-    "vue-loader": "^15.9.4",
-    "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.6.12",
-    "webpack": "^5.3.2",
-    "webpack-cli": "^4.1.0",
+    "vue": "^3.0.4",
+    "vue-loader": "^16.1.1",
+    "webpack": "^5.10.3",
+    "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.3.0"
+    "webpack-merge": "^5.7.0"
+  },
+  "publishConfig": {
+    "tag": "next"
   },
   "browserslist": [
     "last 2 versions",
     "> 1%",
-    "not ie <= 8"
+    "not ie <= 10"
   ],
   "commitlint": {
     "extends": [
