--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "build:docs": "webpack --mode production",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
-    "clear:docs": "del-cli docs",
+    "clean:docs": "del-cli docs",
     "serve": "npm run clean:docs && npm run serve:docs",
     "serve:docs": "webpack serve --mode development",
     "lint": "npm run lint:js && npm run lint:css",
@@ -49,47 +49,47 @@
   "homepage": "https://fengyuanchen.github.io/markdown-to-vue-loader",
   "dependencies": {
     "cheerio": "1.0.0-rc.3",
-    "markdown-it": "^12.0.4",
-    "postcss": "^8.2.2"
+    "markdown-it": "^12.0.6",
+    "postcss": "^8.3.2"
   },
   "peerDependencies": {
     "vue-loader": ">=15.0.0",
     "webpack": "^5.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0",
+    "@babel/core": "^7.14.5",
+    "@babel/preset-env": "^7.14.5",
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4",
     "@vue/compiler-sfc": "^3.0.5",
     "babel-loader": "^8.2.2",
-    "chai": "^4.2.0",
-    "codecov": "^3.8.1",
+    "chai": "^4.3.4",
+    "codecov": "^3.8.2",
     "conventional-changelog-cli": "^2.1.1",
-    "css-loader": "^5.0.1",
+    "css-loader": "^5.2.6",
     "del-cli": "^3.0.1",
-    "eslint": "^7.16.0",
+    "eslint": "^7.28.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-html": "^6.1.1",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-vue": "^7.4.0",
+    "eslint-plugin-html": "^6.1.2",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-vue": "^7.11.0",
     "html-webpack-plugin": "^4.5.0",
     "husky": "^6.0.0",
-    "lint-staged": "^10.5.3",
+    "lint-staged": "^11.0.0",
     "memory-fs": "^0.5.0",
     "mocha": "^8.2.1",
     "nyc": "^15.1.0",
     "postcss-loader": "^4.1.0",
     "style-loader": "^2.0.0",
-    "stylelint": "^13.8.0",
-    "stylelint-config-standard": "^20.0.0",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^22.0.0",
     "stylelint-order": "^4.1.0",
     "vue": "^3.0.4",
     "vue-loader": "^16.1.2",
-    "webpack": "^5.11.1",
-    "webpack-cli": "^4.3.1",
-    "webpack-dev-server": "^3.11.1",
-    "webpack-merge": "^5.7.3"
+    "webpack": "^5.38.1",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.8.0"
   },
   "browserslist": [
     "last 2 versions",
