--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "markdown-to-vue-loader",
-  "version": "3.1.1",
+  "version": "3.1.2",
   "description": "Markdown to Vue component loader for Webpack.",
   "main": "index.js",
   "files": [
     "index.js"
   ],
   "scripts": {
-    "build:docs": "webpack --mode production",
+    "build:docs": "webpack --env production",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "clean:docs": "del-cli docs",
     "serve": "npm run clean:docs && npm run serve:docs",
     "serve:docs": "webpack serve --mode development",
     "lint": "npm run lint:js && npm run lint:css",
-    "lint:css": "stylelint {src,test}/**/*.{css,scss,vue,html,md} --fix",
-    "lint:js": "eslint src test *.js --ext .js,.vue --fix",
+    "lint:css": "stylelint **/*.{css,scss,vue} --fix",
+    "lint:js": "eslint . --ext .js,.ts,.vue --fix",
     "prepare": "husky install",
     "release": "npm run lint && npm test && npm run release:docs && npm run changelog",
     "release:docs": "npm run clean:docs && npm run build:docs",
@@ -48,46 +48,47 @@
   },
   "homepage": "https://fengyuanchen.github.io/markdown-to-vue-loader",
   "dependencies": {
-    "cheerio": "1.0.0-rc.3",
-    "markdown-it": "^12.2.0",
-    "postcss": "^8.3.8"
+    "cheerio": "1.0.0-rc.10",
+    "markdown-it": "^12.3.2",
+    "postcss": "^8.4.6"
   },
   "peerDependencies": {
     "vue-loader": ">=15.0.0",
     "webpack": "^5.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.5",
-    "@babel/preset-env": "^7.15.6",
-    "@commitlint/cli": "^13.2.0",
-    "@commitlint/config-conventional": "^13.2.0",
-    "babel-loader": "^8.2.2",
-    "chai": "^4.3.4",
+    "@babel/core": "^7.17.0",
+    "@babel/preset-env": "^7.16.11",
+    "@commitlint/cli": "^16.1.0",
+    "@commitlint/config-conventional": "^16.0.0",
+    "babel-loader": "^8.2.3",
+    "chai": "^4.3.6",
     "codecov": "^3.8.3",
-    "conventional-changelog-cli": "^2.1.1",
-    "css-loader": "^6.3.0",
+    "conventional-changelog-cli": "^2.2.2",
+    "css-loader": "^6.6.0",
     "del-cli": "^4.0.1",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint": "^8.8.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-html": "^6.2.0",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-vue": "^7.18.0",
-    "html-webpack-plugin": "^5.3.2",
-    "husky": "^7.0.2",
-    "lint-staged": "^11.1.2",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-vue": "^8.4.1",
+    "html-webpack-plugin": "^5.5.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.3",
     "memory-fs": "^0.5.0",
-    "mocha": "^9.1.2",
+    "mocha": "^9.2.0",
     "nyc": "^15.1.0",
-    "postcss-loader": "^6.1.1",
-    "style-loader": "^3.3.0",
-    "stylelint": "^13.13.1",
-    "stylelint-config-standard": "^22.0.0",
-    "stylelint-order": "^4.1.0",
-    "vue": "^3.2.19",
-    "vue-loader": "^16.5.0",
-    "webpack": "^5.38.1",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.3.0",
+    "postcss-loader": "^6.2.1",
+    "style-loader": "^3.3.1",
+    "stylelint": "^14.3.0",
+    "stylelint-config-recommended-scss": "^5.0.2",
+    "stylelint-config-recommended-vue": "^1.1.0",
+    "stylelint-order": "^5.0.0",
+    "vue": "^3.2.30",
+    "vue-loader": "^17.0.0",
+    "webpack": "^5.68.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4",
     "webpack-merge": "^5.8.0"
   }
 }
